--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home Page</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Welcome to My Web Application</h1>
     <p>This is the home page.</p>
-</body>
+    <button> <a href="signup.html">Go to signup Page</a>
+  </body></button>
+   
 </html>
